--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -115,119 +115,119 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_core_utils_discovery --> cli_cli_config\n",
-    "    cli_display --> cli_pattern_scanner\n",
     "    cli_display --> cli_utils\n",
     "    cli_display --> cli_cli_config\n",
-    "    cli_display --> cli_core_utils_discovery\n",
-    "    cli_display --> cli_factory_extraction\n",
     "    cli_display --> cli_example_discovery\n",
-    "    cli_display --> cli_imports\n",
+    "    cli_display --> cli_factory_extraction\n",
     "    cli_display --> cli_search\n",
+    "    cli_display --> cli_pattern_scanner\n",
     "    cli_display --> cli_test_code\n",
     "    cli_display --> cli_helper_discovery\n",
-    "    cli_dynamic_examples --> cli_pattern_scanner\n",
+    "    cli_display --> cli_core_utils_discovery\n",
+    "    cli_display --> cli_imports\n",
     "    cli_dynamic_examples --> cli_utils\n",
-    "    cli_dynamic_examples --> cli_cli_config\n",
     "    cli_dynamic_examples --> cli_display\n",
-    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
-    "    cli_dynamic_examples --> cli_factory_extraction\n",
+    "    cli_dynamic_examples --> cli_cli_config\n",
     "    cli_dynamic_examples --> cli_example_discovery\n",
-    "    cli_dynamic_examples --> cli_imports\n",
+    "    cli_dynamic_examples --> cli_factory_extraction\n",
     "    cli_dynamic_examples --> cli_search\n",
+    "    cli_dynamic_examples --> cli_pattern_scanner\n",
     "    cli_dynamic_examples --> cli_test_code\n",
     "    cli_dynamic_examples --> cli_helper_discovery\n",
+    "    cli_dynamic_examples --> cli_core_utils_discovery\n",
+    "    cli_dynamic_examples --> cli_imports\n",
     "    cli_example_discovery --> cli_utils\n",
-    "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_display\n",
     "    cli_explorer --> cli_cli_config\n",
     "    cli_explorer --> cli_dynamic_examples\n",
-    "    cli_explorer --> cli_display\n",
-    "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_test_code\n",
-    "    cli_factory_extraction --> cli_utils\n",
+    "    cli_explorer --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
-    "    cli_helper_discovery --> cli_utils\n",
+    "    cli_factory_extraction --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
-    "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_helper_discovery --> cli_utils\n",
+    "    cli_imports --> cli_factory_extraction\n",
     "    cli_imports --> cli_cli_config\n",
+    "    cli_imports --> cli_core_utils_discovery\n",
     "    cli_imports --> cli_helper_discovery\n",
     "    cli_imports --> cli_utils\n",
-    "    cli_imports --> cli_factory_extraction\n",
     "    cli_pattern_scanner --> cli_cli_config\n",
     "    cli_pattern_scanner --> cli_example_discovery\n",
     "    cli_search --> cli_utils\n",
     "    cli_search --> cli_example_discovery\n",
     "    cli_search --> cli_helper_discovery\n",
     "    cli_search --> cli_factory_extraction\n",
+    "    cli_test_code --> cli_factory_extraction\n",
     "    cli_test_code --> cli_cli_config\n",
     "    cli_test_code --> cli_helper_discovery\n",
     "    cli_test_code --> cli_utils\n",
-    "    cli_test_code --> cli_factory_extraction\n",
     "    cli_utils --> cli_cli_config\n",
-    "    core_testing --> utilities_backgrounds\n",
-    "    core_testing --> utilities_spacing\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_effects\n",
-    "    core_testing --> utilities_layout\n",
-    "    core_testing --> utilities_borders\n",
-    "    core_testing --> utilities_accessibility\n",
-    "    core_testing --> utilities_sizing\n",
-    "    core_testing --> utilities_typography\n",
     "    core_testing --> utilities_transitions_and_animation\n",
+    "    core_testing --> utilities_borders\n",
+    "    core_testing --> utilities_backgrounds\n",
+    "    core_testing --> utilities_typography\n",
+    "    core_testing --> utilities_layout\n",
+    "    core_testing --> utilities_sizing\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_effects\n",
+    "    core_testing --> utilities_accessibility\n",
     "    core_testing --> core_resources\n",
     "    core_testing --> core_base\n",
-    "    utilities_accessibility --> core_testing\n",
     "    utilities_accessibility --> builders_scales\n",
+    "    utilities_accessibility --> core_testing\n",
     "    utilities_accessibility --> core_base\n",
-    "    utilities_backgrounds --> core_testing\n",
-    "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_colors\n",
+    "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_scales\n",
-    "    utilities_borders --> core_testing\n",
-    "    utilities_borders --> core_base\n",
+    "    utilities_backgrounds --> core_testing\n",
     "    utilities_borders --> builders_colors\n",
+    "    utilities_borders --> core_base\n",
     "    utilities_borders --> builders_scales\n",
-    "    utilities_effects --> core_testing\n",
-    "    utilities_effects --> core_base\n",
+    "    utilities_borders --> core_testing\n",
     "    utilities_effects --> builders_colors\n",
+    "    utilities_effects --> core_base\n",
     "    utilities_effects --> builders_scales\n",
-    "    utilities_filters --> core_testing\n",
+    "    utilities_effects --> core_testing\n",
     "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_scales\n",
+    "    utilities_filters --> core_testing\n",
     "    utilities_flexbox_and_grid --> core_base\n",
-    "    utilities_flexbox_and_grid --> core_testing\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
-    "    utilities_interactivity --> core_testing\n",
-    "    utilities_interactivity --> builders_scales\n",
-    "    utilities_interactivity --> core_base\n",
+    "    utilities_flexbox_and_grid --> core_testing\n",
     "    utilities_interactivity --> builders_colors\n",
+    "    utilities_interactivity --> core_base\n",
+    "    utilities_interactivity --> builders_scales\n",
+    "    utilities_interactivity --> core_testing\n",
     "    utilities_layout --> core_base\n",
-    "    utilities_layout --> core_testing\n",
     "    utilities_layout --> builders_scales\n",
-    "    utilities_sizing --> core_testing\n",
+    "    utilities_layout --> core_testing\n",
     "    utilities_sizing --> builders_scales\n",
+    "    utilities_sizing --> core_testing\n",
     "    utilities_sizing --> core_base\n",
-    "    utilities_spacing --> core_base\n",
-    "    utilities_spacing --> core_testing\n",
     "    utilities_spacing --> builders_scales\n",
-    "    utilities_svg --> core_testing\n",
-    "    utilities_svg --> core_base\n",
+    "    utilities_spacing --> core_testing\n",
+    "    utilities_spacing --> core_base\n",
     "    utilities_svg --> builders_colors\n",
+    "    utilities_svg --> core_base\n",
     "    utilities_svg --> builders_scales\n",
-    "    utilities_tables --> core_testing\n",
-    "    utilities_tables --> builders_scales\n",
+    "    utilities_svg --> core_testing\n",
     "    utilities_tables --> core_base\n",
+    "    utilities_tables --> builders_scales\n",
+    "    utilities_tables --> core_testing\n",
     "    utilities_transforms --> core_base\n",
-    "    utilities_transforms --> core_testing\n",
     "    utilities_transforms --> builders_scales\n",
-    "    utilities_transitions_and_animation --> core_testing\n",
+    "    utilities_transforms --> core_testing\n",
     "    utilities_transitions_and_animation --> core_base\n",
     "    utilities_transitions_and_animation --> builders_scales\n",
-    "    utilities_typography --> core_testing\n",
-    "    utilities_typography --> builders_scales\n",
+    "    utilities_transitions_and_animation --> core_testing\n",
     "    utilities_typography --> builders_colors\n",
     "    utilities_typography --> core_base\n",
+    "    utilities_typography --> builders_scales\n",
+    "    utilities_typography --> core_testing\n",
     "```\n",
     "\n",
     "*116 cross-module dependencies detected*"
@@ -4388,19 +4388,16 @@
     "\n",
     "```python\n",
     "def extract_css_classes_from_node(\n",
-    "    node: ast.AST  # TODO: Add description\n",
-    ") -> List[str]:  # TODO: Add return description\n",
-    "    \"\"\"\n",
-    "    Recursively extract CSS classes from an AST node.\n",
-    "    Handles various patterns including combine_classes calls.\n",
-    "    \"\"\"\n",
+    "    node: ast.AST  # AST node to extract CSS classes from\n",
+    ") -> List[str]:  # List of CSS class strings found in the node\n",
+    "    \"Recursively extract CSS classes from an AST node. Handles various patterns including combine_classes calls.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def display_patterns(\n",
     "    patterns: List[ClsPattern],  # List of ClsPattern objects to display\n",
     "    show_context: bool = True  # Whether to show the code context\n",
-    ") -> None:  # TODO: Add return description\n",
+    "):  # Displays patterns to stdout, returns nothing\n",
     "    \"Display found patterns in a formatted way.\"\n",
     "```\n",
     "\n",
@@ -4467,7 +4464,7 @@
     "```python\n",
     "def display_match_results(\n",
     "    matches: Dict[str, CSSClassMatch]  # Dictionary of CSS classes to their match results\n",
-    ") -> None:  # TODO: Add return description\n",
+    "):  # Displays match results to stdout, returns nothing\n",
     "    \"Display match results in a formatted way.\"\n",
     "```\n",
     "\n",
@@ -4481,7 +4478,7 @@
     "```python\n",
     "def display_code_analysis(\n",
     "    code: str  # Python source code to analyze\n",
-    ") -> None:  # TODO: Add return description\n",
+    "):  # Displays analysis report to stdout, returns nothing\n",
     "    \"Analyze and display replaceable patterns in Python code.\"\n",
     "```\n",
     "\n",
@@ -4513,14 +4510,14 @@
     "```python\n",
     "def display_migration_suggestions(\n",
     "    code: str  # Python source code to analyze\n",
-    ") -> None:  # TODO: Add return description\n",
+    "):  # Displays migration suggestions to stdout, returns nothing\n",
     "    \"Analyze code and display migration suggestions.\"\n",
     "```\n",
     "\n",
     "```python\n",
     "def analyze_and_suggest(\n",
     "    code: str  # Python source code to analyze\n",
-    ") -> None:  # TODO: Add return description\n",
+    "):  # Displays analysis and migration suggestions to stdout, returns nothing\n",
     "    \"Perform complete analysis of code with migration suggestions.\"\n",
     "```\n",
     "\n",
@@ -4565,7 +4562,7 @@
     "def display_input_analysis(\n",
     "    input_source: str,  # Code string, Python file path, or notebook path\n",
     "    input_type: Optional[InputType] = None  # Optional explicit input type. If None, will auto-detect.\n",
-    ") -> None:  # TODO: Add return description\n",
+    "):  # Displays analysis report to stdout, returns nothing\n",
     "    \"Analyze and display replaceable patterns from any input type.\"\n",
     "```\n",
     "\n",
@@ -4573,7 +4570,7 @@
     "def analyze_and_suggest_input(\n",
     "    input_source: str,  # Code string, Python file path, or notebook path\n",
     "    input_type: Optional[InputType] = None  # Optional explicit input type. If None, will auto-detect.\n",
-    ") -> None:  # TODO: Add return description\n",
+    "):  # Displays analysis and migration suggestions to stdout, returns nothing\n",
     "    \"Perform complete analysis with migration suggestions for any input type.\"\n",
     "```\n",
     "\n",
@@ -4595,20 +4592,20 @@
     "class ClsPatternVisitor:\n",
     "    def __init__(\n",
     "        self,\n",
-    "        source_lines: List[str]  # TODO: Add description\n",
+    "        source_lines: List[str]  # Source code lines for extracting context around patterns\n",
     "    )\n",
     "    \"AST visitor to find cls= patterns in Python code.\"\n",
     "    \n",
     "    def __init__(\n",
     "            self,\n",
-    "            source_lines: List[str]  # TODO: Add description\n",
+    "            source_lines: List[str]  # Source code lines for extracting context around patterns\n",
     "        )\n",
     "        \"Initialize with source code lines for context extraction.\"\n",
     "    \n",
     "    def visit_Call(\n",
     "            self,\n",
-    "            node: ast.Call  # TODO: Add description\n",
-    "        ) -> None:  # TODO: Add return description\n",
+    "            node: ast.Call  # AST Call node to examine for cls= keyword arguments\n",
+    "        ):  # Visits the node and updates self.patterns\n",
     "        \"Visit function calls to find cls= keyword arguments.\"\n",
     "```\n",
     "\n",
